--- a/src/app/updateProfile/updateProfile.css
+++ b/src/app/updateProfile/updateProfile.css
@@ -6,9 +6,14 @@ body {
     margin: 0;
     padding: 0;
 }
+div.enterUpdateUserProfile{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
 div.updateProfile_Text{
     background-color: #A58473;
-    margin: 5% 0 5% 0;
+    margin: 2% 0 2% 0;
     padding: 15px 0 15px 0;
 }
 div.updateProfile_Text h1 {
@@ -28,7 +33,7 @@ div.enterUpdateUserProfile{
 }
 
 div.updateProfile_img{
-    margin: 5%;
+    margin: 5% 0 0 0;
 }
 
 div.profile_img{
@@ -54,7 +59,7 @@ button#btn_imgUpdate{
     font-weight: bold;
 }
 div#form{
-    margin: 80px 5% 120px 5%;
+    margin: 80px 2% 120px 10%;
 
 }
 div#form form label{
@@ -80,7 +85,16 @@ div#form button {
     border-radius: 30px;
     margin:  30px auto;
     color: #fff;
+    font-weight: bold;
+    font-size: 1.2rem;
     background-color: #605252;
+}
+
+div#form button#returnCU{
+    background-color: #EBE8DB;
+    color: #000;
+    font-size: 1rem;
+    border: #8e7560 solid 2px;
 }
 
 @media(max-width: 1500px) {
