--- a/src/app/updateProfile/updateProfile.css
+++ b/src/app/updateProfile/updateProfile.css
@@ -6,20 +6,47 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/*　パンくずリスト　*/
+div#bread{
+    margin: 25px 0 0 15px;
+    display: flex;
+}
+div#bread p{
+    margin: 0 0 15px 0;
+    color: #605252;
+    font-weight: bold;
+}
+div#bread p.breadText{
+    margin: 0 1rem 0 1rem;
+    transition: 0.2s;
+}
+div#bread p.breadText:hover{
+    opacity: 0.7;
+    border-bottom: #605252 solid 1px;
+}
 div.enterUpdateUserProfile{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 div.updateProfile_Text{
-    background-color: #A58473;
-    margin: 2% 0 2% 0;
-    padding: 15px 0 15px 0;
+    background-color: #fefeed;
+    border: #605252 5px;
+    border-style: solid none;
+    margin: 0 0 2% 0;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
+}
+div.updateProfile_Text svg{
+    margin: 0 0 0 5%;
 }
 div.updateProfile_Text h1 {
     font-weight: bold;
     font-size: 2rem;
     text-align: center;
+    text-indent: 1.2rem;
 }
 
 div.enterUpdateUserProfile{
@@ -81,21 +108,28 @@ div#form button {
     display: flex;
     justify-content: center;
     padding: 10px 40px;
-    border: black solid 2px;
+    border: #000 solid 2px;
     border-radius: 30px;
     margin:  30px auto;
-    color: #fff;
+    color: #EBE8DB;
     font-weight: bold;
     font-size: 1.2rem;
     background-color: #605252;
+    box-shadow:3px 3px 0 #605252;
+    transition: box-shadow 0.2s;
+}
+div#form button:hover{
+    box-shadow: 0 0 0 #605252 ;
+    opacity: 0.7;
 }
 
-div#form button#returnCU{
+div#form button#resetPF{
     background-color: #EBE8DB;
-    color: #000;
+    color: #605252;
     font-size: 1rem;
     border: #8e7560 solid 2px;
 }
+
 
 @media(max-width: 1500px) {
     div.enterUpdateUserProfile{
