--- a/src/app/(confirm)/confirmUser/confirmUser.css
+++ b/src/app/(confirm)/confirmUser/confirmUser.css
@@ -29,6 +29,14 @@ div#confirms{
     /*margin: 0 0 0 -120px;*/
 }
 
+h1#CUtitle{
+    margin: 0 0 0 10%;
+    color: #fff;
+    background-color: #8e7560;
+    border-radius: 5px;
+    text-indent: 2rem;
+}
+
 div.confirm{
     display: inline-flex;
     flex-direction: row;
@@ -102,6 +110,11 @@ div.rightbar{
 div.rightbar h2{
     text-align: center;
     font-size: 3rem;
+}
+div.rightbar h2:hover{
+    opacity: 0.6;
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 div.rightbar_flex{
