--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background: #EBE8DB;
 }
 
 div #wrap{
@@ -92,21 +93,32 @@ div.ListingBtn{
 }
 
 div.ListingBtn button{
-
-    padding: 10px 50px;
     margin-left: 30px;
     border-radius: 50px;
+    box-shadow: 2px 2px 0 #605252;
+    transition: box-shadow 0.2s;
+}
+div.ListingBtn button:hover{
+    opacity: 0.7;
+    box-shadow: none;
 }
 div.ListingBtn p{
     font-weight: 600;
+    text-align: center;
 }
 
 div.ListingBtn button.listingCancelbtn{
-    background-color: #D9D9D9;
-    color: #000;
+    background-color: #EBE8DB;
+    color: #605252;
+    border: 2px solid #605252;
+    padding: 10px 10px;
+
 }
 
 div.ListingBtn button.listingcompletebtn{
-    background-color: #000000;
+    background-color: #605252;
     color: #fff;
+    text-indent: 1rem;
+    letter-spacing: 1rem;
+    padding: 10px 25px;
 }
